k8sautodeploy/target/ingress/xyz.example.com-open-call-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: prod-ingress-controller
    
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/service-weight: ''

  name: xyz.example.com-open-call
  namespace: rcrai
spec:
  rules:
  - host: xyz.example.com
    http:
      paths:
      # 基于入口为基准的ingress规则, backend 只存在一个.
      - backend:
          serviceName: foo
          servicePort: 80
        path: /open/call/
        pathType: ImplementationSpecific
  
  tls:
  - hosts:
    - xyz.example.com
    secretName: rcrai-tls
